<resources>
    <string name="app_name">Zoha&amp;Behi</string>
    <string name="tagline">Our pictures, together</string>
    <string name="sign_in">Continue</string>
    <string name="folders_empty">No albums yet. Create one from the menu.</string>
    <string name="images_empty">No pictures in this album</string>
    <string name="loading">Loading…</string>
    <string name="photos_count">%d photos</string>
    <string name="photo_count">1 photo</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete selected items?</string>
    <string name="delete_message">The selected items will be permanently deleted. Deleting an album also deletes all of its pictures.</string>
    <string name="deleted">%d item(s) deleted</string>
    <string name="uploading">Uploading %1$d of %2$d…</string>
    <string name="uploaded">Uploaded %d picture(s)</string>
    <string name="upload_failed">Upload failed: %s</string>
    <string name="add">Add pictures</string>
    <string name="error_generic">Error: %s</string>
    <string name="selected_count">%d selected</string>
    <string name="untitled">Untitled</string>
    <string name="new_album">New album</string>
    <string name="album_name">Album name</string>
    <string name="album_date">Date</string>
    <string name="album_location">Location (optional)</string>
    <string name="album_name_required">Please enter a name</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="reorder">Reorder</string>
    <string name="reorder_title">Reorder</string>
    <string name="reorder_hint">Long-press an album and drag it</string>
    <string name="order_saved">Order saved</string>
    <string name="reorder_hint_photos">Drag pictures to reorder. The first picture is the album cover</string>
    <string name="select_date">Select date</string>
    <string name="ok">OK</string>
    <string name="rename">Rename</string>
    <string name="rename_album">Rename album</string>
    <string name="renamed">Album renamed</string>
    <string name="rename_exists">An album with this name already exists</string>
    <string name="comments">Comments</string>
    <string name="comment_hint">Write a comment…</string>
    <string name="send">Send</string>
    <string name="comments_with_count">Comments (%d)</string>
    <string name="comments_empty">No comments yet</string>
    <string name="comments_load_failed">Could not load comments: %s</string>
    <string name="comment_send_failed">Could not send comment: %s</string>
    <string name="comment_delete_failed">Could not delete comment: %s</string>
    <string name="delete_comment_title">Delete comment?</string>
    <string name="delete_comment_message">This comment will be permanently deleted.</string>
    <string name="change_name">Change my name</string>
    <string name="your_name_hint">Your name</string>
    <string name="name_dialog_title">Who is commenting?</string>
    <string name="edit">Edit</string>
    <string name="edit_album">Edit album</string>
    <string name="album_updated">Album updated</string>
</resources>