<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_save_order"
        android:title="@string/save"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_cancel_order"
        android:title="@string/cancel"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reorder"
        android:title="@string/reorder"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:showAsAction="never" />

</menu>